[package]
name = "superconf"
description = "A barebones configuration file made for low-dependancy rust applications."
version = "0.1.0"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
