[package]
name = "superconf"
description = "A barebones configuration file made for low-dependency rust applications."
version = "0.4.3"
readme = "README.md"
license = "MIT"
keywords = ["configuration", "markup", "parser", "no-dependencies"]
repository = "https://gitlab.com/Owez/superconf"
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"
